k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongols-app
  labels:
    app.kubernetes.io/name: mongols-app
