k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongols-app-web
  namespace: mongols-app
  labels:
    app.kubernetes.io/name: mongols-app
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mongols-app
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
